# tandem-couting-bloom-filter

./: .gitignore  Makefile  README.md  main-optimized  perf.sh  test.sh  test_main.cpp  tester.hpp
doc/presentation/: main.tex
doc/presentation/tum/: tumbeamer.cls
include/: bf.hpp  cbf.hpp  tbf.hpp  vbf.hpp
include/bloom_filter/: cbf.hpp  tbf.hpp
include/btree/: btree.hpp
src/: CMakeLists.txt  bf.cpp  cbf.cpp  help.cpp  main.cpp  main.hpp  murmurHash.cpp  murmurHash.hpp  tbf.cpp  test  test.cpp  utility.cpp  utility.hpp  vbf.cpp
src/bloom_filter/: Makefile  bf.cpp  murmurHash.hpp  tbf.cpp  utility.hpp  vbf.cpp
src/btree/: Makefile  btree.cpp  btree.hpp  printTree.cpp  printTree.hpp  slotted_page.cpp  slotted_page.hpp  utility.cpp  utility.hpp
src/filter/bf/: bf.cpp  bf.hpp
src/filter/cbf/: cbf.cpp  cbf.hpp
src/filter/tbf/: tbf.cpp  tbf.hpp
src/filter/vbf/: tbf.hpp  vbf.cpp  vbf.hpp
src/ultility/: array.cpp  array.hpp  help.cpp  help.hpp  murmurHash.cpp  murmurHash.hpp  sha.cpp  sha.hpp
test/: Makefile  test  test.cpp  test.hpp  test.sh
test/bloom_filter_tests/: Makefile  test.cpp  test.hpp
test/btree_tests/: Makefile  test_main.cpp  tester.hpp
